--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,4 +31,8 @@
     <dimen name="text_big">40sp</dimen>
     <dimen name="text_big_2x">60sp</dimen>
     <dimen name="text_big_3x">80sp</dimen>
+
+    <!-- App specific values -->
+    <dimen name="logo_size">80dp</dimen>
+    <dimen name="size_tappable_small">48dp</dimen>
 </resources>
