--- a/app/src/main/res/layout/activity_news_details.xml
+++ b/app/src/main/res/layout/activity_news_details.xml
@@ -15,20 +15,67 @@
             android:layout_width="match_parent"
             android:layout_height="256dp"
             app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways">
-            
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
             <android.support.v4.view.ViewPager
                 android:id="@+id/vp_news_details_images"
                 android:layout_width="match_parent"
                 android:layout_height="256dp"
-                android:fitsSystemWindows="true"
-                />
+                android:fitsSystemWindows="true" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/iv_publication_logo"
+                    android:layout_width="@dimen/logo_size"
+                    android:layout_height="@dimen/logo_size"
+                    android:src="@drawable/img_publication_logo_placeholder"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="@dimen/news_details_publication_logo_margin_bottom"
+                    android:layout_marginLeft="@dimen/margin_medium_2"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_publication_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Eleven Media"
+                    android:layout_toRightOf="@id/iv_publication_logo"
+                    android:layout_alignTop="@id/iv_publication_logo"
+                    android:layout_marginTop="@dimen/margin_medium"
+                    android:textSize="@dimen/text_regular_3x"
+                    android:textColor="@color/white_full"
+                    android:layout_marginLeft="@dimen/margin_medium_2"
+                    android:shadowColor="@color/black_full"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="2"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_published_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Posted At : Jan 01 - 6:30AM"
+                    android:layout_below="@id/tv_publication_name"
+                    android:layout_alignLeft="@id/tv_publication_name"
+                    android:layout_marginTop="@dimen/margin_small"
+                    android:textColor="@color/white_full"
+                    android:textSize="@dimen/text_regular_2x"
+                    android:shadowColor="@color/black_full"
+                    android:shadowDx="2"
+                    android:shadowDy="2"
+                    android:shadowRadius="2"
+                    />
+
+            </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                />
+                app:layout_collapseMode="pin" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -43,29 +90,62 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <TextView
                 android:id="@+id/tv_news_details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/dummy_news_details"
                 android:layout_margin="@dimen/margin_medium_2"
                 android:lineSpacingMultiplier="1.3"
+                android:text="@string/dummy_news_details"
+                android:paddingBottom="80dp"
+                android:textColor="@color/primary_text"
                 />
 
         </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:weightSum="5"
+        android:background="@color/white_full"
+        android:orientation="horizontal"
+        android:padding="@dimen/margin_medium_2">
+
+        <TextView
+            android:id="@+id/btn_comment_news"
+            style="@style/AccentBorderButton"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/button_large_size"
+            android:layout_weight="3"
+            android:text="@string/btn_comment_news"
+            android:drawableLeft="@drawable/ic_chat_bubble_outline_accent_24dp"
+            />
+
+        <TextView
+            android:id="@+id/btn_send_to_news"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/button_large_size"
+            android:layout_weight="2"
+            android:text="@string/btn_send_to_news"
+            style="@style/AccentButton"
+            android:drawableLeft="@drawable/ic_send_white_24dp"
+            android:layout_marginLeft="@dimen/margin_medium_2"
+            />
+
+    </LinearLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_share_24dp"
-        app:layout_anchor="@id/appbar_layout"
-        app:layout_anchorGravity="right|bottom"
         android:layout_marginRight="@dimen/margin_medium_2"
-        />
+        android:src="@drawable/ic_favorite_border_white_24dp"
+        app:layout_anchor="@id/appbar_layout"
+        app:layout_anchorGravity="right|bottom" />
 
 </android.support.design.widget.CoordinatorLayout>
