--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,4 +35,6 @@
     <!-- App specific values -->
     <dimen name="logo_size">80dp</dimen>
     <dimen name="size_tappable_small">48dp</dimen>
+    <dimen name="button_large_size">54dp</dimen>
+    <dimen name="news_details_publication_logo_margin_bottom">36dp</dimen>
 </resources>
