--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,30 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppButton">
+        <item name="android:paddingLeft">@dimen/margin_medium_2</item>
+        <item name="android:paddingRight">@dimen/margin_medium_2</item>
+        <item name="android:textSize">@dimen/text_regular_2x</item>
+        <item name="android:textColor">@color/white_full</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:gravity">center</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:shadowColor">@color/black_full</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:clickable">true</item>
+    </style>
+
+    <style name="AccentButton" parent="AppButton">
+        <item name="android:background">@drawable/bg_round_accent</item>
+        <item name="android:foreground">@drawable/bg_ripple_white</item>
+    </style>
+
+    <style name="AccentBorderButton" parent="AppButton">
+        <item name="android:background">@drawable/bg_round_accent_border</item>
+        <item name="android:foreground">@drawable/bg_ripple_accent</item>
+        <item name="android:textColor">@color/accent</item>
+    </style>
 </resources>
