--- a/app/src/main/res/layout/view_item_news_details_image.xml
+++ b/app/src/main/res/layout/view_item_news_details_image.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.padcmyanmar.sfc.viewitems.NewsDetailsImageViewItem xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,4 +11,4 @@
         android:scaleType="centerCrop"
         />
 
-</FrameLayout>
+</com.padcmyanmar.sfc.viewitems.NewsDetailsImageViewItem>
