--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
 
     <color name="white_full">#FFFFFF</color>
     <color name="black_full">#000000</color>
+    <color name="white_overlay_light">#9333</color>
+    <color name="white_ish">#EEE</color>
+    <color name="black_ish">#111</color>
 </resources>
