--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,7 @@
     <dimen name="size_tappable_small">48dp</dimen>
     <dimen name="button_large_size">54dp</dimen>
     <dimen name="news_details_publication_logo_margin_bottom">36dp</dimen>
+    <dimen name="toolbar_margin">0dp</dimen>
+    <dimen name="bg_dialog_button_radius">4dp</dimen>
+    <dimen name="items_photo_size">150dp</dimen>
 </resources>
