Remove dummy codes.

--- a/app/src/main/res/layout/activity_news_list.xml
+++ b/app/src/main/res/layout/activity_news_list.xml
@@ -42,7 +42,7 @@
 
             <include
                 android:id="@+id/vp_empty_news"
-                layout="@layout/view_pod_empty_2"
+                layout="@layout/view_pod_empty"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
