--- a/app/src/main/res/layout/view_item_news.xml
+++ b/app/src/main/res/layout/view_item_news.xml
@@ -3,6 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginLeft="@dimen/margin_medium_2"
     android:layout_marginRight="@dimen/margin_medium_2"
     android:layout_marginTop="@dimen/margin_medium_2"
@@ -10,7 +11,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white_full">
 
         <ImageView
             android:id="@+id/iv_publication_logo"
@@ -75,7 +77,7 @@
             android:layout_height="200dp"
             android:layout_below="@id/tv_brief_news"
             android:layout_marginTop="@dimen/margin_medium_2"
-            android:src="@drawable/img_news_placeholder" />
+            tools:src="@drawable/img_news_placeholder" />
 
         <TextView
             android:id="@+id/tv_news_statistical_data"
