--- a/app/src/main/res/layout/activity_news_list.xml
+++ b/app/src/main/res/layout/activity_news_list.xml
@@ -65,7 +65,8 @@
         android:layout_gravity="start"
         app:headerLayout="@layout/view_pod_login_user"
         app:itemTextColor="@drawable/state_left_menu_item"
-        app:menu="@menu/left_menu_news" />
+        app:menu="@menu/left_menu_news"
+        />
 
 </android.support.v4.widget.DrawerLayout>
 
